Modernize Phase 7: resolve compiler warnings and refine roadmap
- Address deprecated `Class.newInstance()` by migrating to `Class.getDeclaredConstructor().newInstance()` in parser classes.
- Replace deprecated `AccessibleObject.isAccessible()` with `Modifier.isPublic()` in `AFPWriterHumanReadable` to improve diagnostic output stability.
- Resolve unchecked cast warning in `AFP2XML` with appropriate suppression and documentation.
- Enable `-Xlint:deprecation` and `-Xlint:unchecked` in `build.gradle.kts` for proactive debt tracking.
- Refine Phase 7 in `ROADMAP.md` with granular sub-tasks for Record migration, Sealed Classes, and `var` usage.